tests/ui/macros/macro-paren-span-diagnostic.stderr
error[E0616]: field `x` of struct `S` is private
  --> $DIR/macro-paren-span-diagnostic.rs:21:14
   |
LL |     paren!(s.x);
   |              ^ private field

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0616`.
